Delete & Update Quntity implement in Cart Page

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -10,5 +10,6 @@
   "fr": "French",
   "Call Us": "Call Us",
   "Free delivery on order over": "Free delivery on order over",
-  "Featured Products": "Featured Products"
+  "Featured Products": "Featured Products",
+  "View Cart": "View Cart"
 }
