--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -10,5 +10,6 @@
   "fr": "Francais",
   "Call Us": "Appelez-nous",
   "Free delivery on order over": "Livraison gratuite à partir de",
-  "Featured Products": "Produits populaires"
+  "Featured Products": "Produits populaires",
+  "View Cart": "View Cart"
 }
