Product listing with category details now done

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -1,6 +1,7 @@
 {
   "Home": "Home",
   "Tables": "Tables",
+  "Console": "Console",
   "Living Room": "Living Room",
   "Bedroom": "Bedroom",
   "Decorations": "Decorations",
