--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -2,6 +2,7 @@
   "Home": "Accueil",
   "Tables": "les tables",
   "Living Room": "Salon",
+  "Console": "Console",
   "Bedroom": "Chambre",
   "Decorations": "Décorations",
   "Terms and Policy": "Termes et politique",
