Term & Policy page now completed with api call

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -12,5 +12,67 @@
   "Call Us": "Call Us",
   "Free delivery on order over": "Free delivery on order over",
   "Featured Products": "Featured Products",
-  "View Cart": "View Cart"
+  "View Cart": "View Cart",
+  "Checkout": "Checkout",
+  "Total": "Total",
+  "No items added to cart": "No items added to cart",
+  "Login": "Login",
+  "Register": "Register",
+  "My Account": "My Account",
+  "Recent Orders": "Recent Orders",
+  "Logout": "Logout",
+  "Join With Us!": "Join With Us!",
+  "Subscribe to our newsletter to receive news on update": "Subscribe to our newsletter to receive news on update",
+  "Get E-mail updates about our latest shop and special offers.": "Get E-mail updates about our latest shop and special offers.",
+  "Your Email Address": "Your Email Address",
+  "Subscribe": "Subscribe",
+  "Address": "Address",
+  "Tel": "Tel",
+  "E-mail": "E-mail",
+  "USEFUL LINKS": "USEFUL LINKS",
+  "Shop Now": "Shop Now",
+  "Remember me": "Remember me",
+  "Forgot Password?": "Forgot Password?",
+  "Password": "Password",
+  "Email address": "Email address",
+  "First Name": "First Name",
+  "Last Name": "Last Name",
+  "Company Name": "Company Name",
+  "Adresse": "Adresse",
+  "Town/City": "Town/City",
+  "Country": "Country",
+  "State": "State",
+  "Postcode": "Postcode / Zip",
+  "Phone": "Phone",
+  "Repeat Password": "Repeat Password",
+  "Username": "Username or email address",
+  "Personal Information": "Personal Information",
+  "Login Information": "Login Information",
+  "Your cart items": "Your cart items",
+  "Image": "Your cart items",
+  "Product Name": "Your cart items",
+  "Unit Price": "Your cart items",
+  "Qty": "Your cart items",
+  "Subtotal": "Your cart items",
+  "Action": "action",
+  "Continue Shopping": "Continue Shopping",
+  "Clear Shopping Cart": "Clear Shopping Cart",
+  "Apply Coupon": "Apply Coupon",
+  "Proceed to Checkout": "Proceed to Checkout",
+  "Get A Quote": "Get A Quote",
+  "Cart Total": "Cart Total",
+  "Total products": "Total products",
+  "Grand Total": "Grand Total",
+  "Use Coupon Code": "Use Coupon Code",
+  "Enter your coupon code if you have one.": "Enter your coupon code if you have one.",
+  "Estimate Shipping And Tax": "Estimate Shipping And Tax",
+  "Enter your destination to get a shipping estimate.": "Enter your destination to get a shipping estimate.",
+  "Select a state": "Select a state",
+  "Select a country": "Select a country",
+  "Showing": "Showing",
+  "result": "result",
+  "Add to cart": "Add to cart",
+  "Out of Stock": "Out of Stock",
+  "Search": "Search",
+  "Search here...": "Search here..."
 }
