--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -12,5 +12,67 @@
   "Call Us": "Appelez-nous",
   "Free delivery on order over": "Livraison gratuite à partir de",
   "Featured Products": "Produits populaires",
-  "View Cart": "View Cart"
+  "View Cart": "Voir le panier",
+  "Checkout": "Check-out",
+  "Total": "Totale",
+  "No items added to cart": "Aucun article ajouté au panier",
+  "Login": "S'identifier",
+  "Register": "Register",
+  "My Account": "Mon compte",
+  "Recent Orders": "Dernières commandes",
+  "Logout": "Connectez - Out",
+  "Join With Us!": "Rejoignez-nous!",
+  "Subscribe to our newsletter to receive news on update": "Abonnez-vous à notre newsletter pour recevoir les actualités",
+  "Get E-mail updates about our latest shop and special offers.": "Recevez des mises à jour par e-mail sur notre dernière boutique et nos offres spéciales.",
+  "Your Email Address": "Votre adresse email",
+  "Subscribe": "Souscrire",
+  "Address": "Adresse",
+  "Tel": "Tél",
+  "E-mail": "Email",
+  "USEFUL LINKS": "LIENS UTILES",
+  "Shop Now": "Achetez maintenant",
+  "Remember me": "Souviens-toi de moi",
+  "Forgot Password?": "Mot de passe oublié?",
+  "Password": "Mot de passe",
+  "Email address": "Adresse électronique",
+  "First Name": "Prénom",
+  "Last Name": "Nom de famille",
+  "Company Name": "Nom de la compagnie",
+  "Adresse": "Adresse",
+  "Town/City": "Ville",
+  "Country": "Pays",
+  "State": "Etat",
+  "Postcode": "Code postal / Zip",
+  "Phone": "Téléphone",
+  "Repeat Password": "Répéter le mot de passe",
+  "Username": "Nom d'utilisateur ou adresse e-mail",
+  "Personal Information": "Renseignements personnels",
+  "Login Information": "Informations de connexion",
+  "Your cart items": "Articles de votre panier",
+  "Image": "Your cart items",
+  "Product Name": "Nom du produit",
+  "Unit Price": "Prix ​​unitaire",
+  "Qty": "Qté",
+  "Subtotal": "Total",
+  "Action": "action",
+  "Continue Shopping": "Continuer vos achats",
+  "Clear Shopping Cart": "Effacer le panier",
+  "Apply Coupon": "Appliquer Coupon",
+  "Proceed to Checkout": "Passer à la caisse",
+  "Get A Quote": "Obtenez un devis",
+  "Cart Total": "Total du panier",
+  "Total products": "Total produits",
+  "Grand Total": "somme finale",
+  "Use Coupon Code": "Utilisez le code de coupon",
+  "Enter your coupon code if you have one.": "Entrez votre code de coupon si vous en avez un.",
+  "Estimate Shipping And Tax": "Estimation des frais de transports et de la TVA",
+  "Enter your destination to get a shipping estimate.": "Entrez votre destination pour obtenir une estimation de livraison.",
+  "Select a state": "Sélectionner un état",
+  "Select a country": "Choisissez un pays",
+  "Showing": "Montrant",
+  "result": "résultat",
+  "Add to cart": "Ajouter au chariot",
+  "Out of Stock": "En rupture de stock",
+  "Search": "Chercher",
+  "Search here...": "Cherche ici..."
 }
