The translation task has been completed in the all pages

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -49,11 +49,11 @@
   "Personal Information": "Personal Information",
   "Login Information": "Login Information",
   "Your cart items": "Your cart items",
-  "Image": "Your cart items",
-  "Product Name": "Your cart items",
-  "Unit Price": "Your cart items",
-  "Qty": "Your cart items",
-  "Subtotal": "Your cart items",
+  "Image": "Image",
+  "Product Name": "Product Name",
+  "Unit Price": "Unit Price",
+  "Qty": "Qty",
+  "Subtotal": "Subtotal",
   "Action": "action",
   "Continue Shopping": "Continue Shopping",
   "Clear Shopping Cart": "Clear Shopping Cart",
@@ -74,5 +74,53 @@
   "Add to cart": "Add to cart",
   "Out of Stock": "Out of Stock",
   "Search": "Search",
-  "Search here...": "Search here..."
+  "Search here...": "Search here...",
+  "Forgot Password": "Mot de passe oublié",
+  "Forgot Password Note": "Lost your password? Please enter your username or email address. You will receive a link to create a new password via email.",
+  "Reset Password": "Reset Password",
+  "Go to login": "Go to login",
+  "Update Password": "Update Password",
+  "Reset Password Note": "Your new password must be diffrent from previous used passwords.",
+  "Link Invalid": "Your reset password link is invalid.",
+  "To Your Reset Password": "To reset your password, return to the login page and select 'Forgot Password' to send a new email",
+  "Back to login page": "Back to login page",
+  "Returning customer ? Click here to login": "Returning customer ? Click here to login",
+  "Billing Details": "Billing Details",
+  "Street Address": "Street Address",
+  "House number and street name": "House number and street name",
+  "Create an account": "Create an account",
+  "SHIP TO A DIFFERENT ADDRESS?": "SHIP TO A DIFFERENT ADDRESS?",
+  "Shipping Details": "Shipping Details",
+  "Additional information": "Additional information",
+  "Order notes": "Order notes",
+  "Notes about your order, e.g. special notes for delivery.": "Notes about your order, e.g. special notes for delivery.",
+  "Your order": "Your order",
+  "I agree with the terms and conditions": "I agree with the terms and conditions",
+  "Product": "Product",
+  "Get In Touch": "Get In Touch",
+  "Name": "Name",
+  "Subject": "Subject",
+  "Your Message": "Your Message",
+  "Send": "Send",
+  "Continue": "Continue",
+  "Delivery Information": "Delivery Information",
+  "Delivery Address": "Delivery Address",
+  "Billing Information": "Billing Information",
+  "Billing Address": "Billing Address",
+  "User Name": "User Name",
+  "Current Password": "Current Password",
+  "Change your password": "Change your password",
+  "Your orders items": "Your orders items",
+  "View Details": "View Details",
+  "Order Id": "Order Id",
+  "Ordered on": "Ordered on",
+  "Order Total": "Order Total",
+  "Your orders details": "Your orders details",
+  "Payment & Shipping details": "Payment & Shipping details",
+  "Order No": "Order No.",
+  "Order Date": "Order Date",
+  "Payment Methods": "Payment Methods",
+  "Order Status": "Order Status",
+  "No items found": "No items found",
+  "No items found in recent order": "No items found in recent order"
 }
