--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -49,7 +49,7 @@
   "Personal Information": "Renseignements personnels",
   "Login Information": "Informations de connexion",
   "Your cart items": "Articles de votre panier",
-  "Image": "Your cart items",
+  "Image": "Image",
   "Product Name": "Nom du produit",
   "Unit Price": "Prix ​​unitaire",
   "Qty": "Qté",
@@ -74,5 +74,53 @@
   "Add to cart": "Ajouter au chariot",
   "Out of Stock": "En rupture de stock",
   "Search": "Chercher",
-  "Search here...": "Cherche ici..."
+  "Search here...": "Cherche ici...",
+  "Forgot Password": "Forgot Password",
+  "Forgot Password Note": "Mot de passe perdu? Veuillez saisir votre identifiant ou adresse mail. Vous recevrez un lien pour créer un nouveau mot de passe par e-mail.",
+  "Reset Password": "réinitialiser le mot de passe",
+  "Go to login": "Aller à la connexion",
+  "Update Password": "Mettre à jour le mot de passe",
+  "Reset Password Note": "Votre nouveau mot de passe doit être différent des mots de passe utilisés précédemment.",
+  "Link Invalid": "Votre lien de réinitialisation du mot de passe n'est pas valide.",
+  "To Your Reset Password": "Pour réinitialiser votre mot de passe, retournez à la page de connexion et sélectionnez `` Mot de passe oublié '' pour envoyer un nouvel e-mail",
+  "Back to login page": "Retour à la page de connexion",
+  "Returning customer ? Click here to login": "Déjà client ? Cliquez ici pour vous identifier",
+  "Billing Details": "Détails de la facturation",
+  "Street Address": "Adresse de rue",
+  "House number and street name": "Numéro de maison et nom de rue",
+  "Create an account": "Créer un compte",
+  "SHIP TO A DIFFERENT ADDRESS?": "LIVRER À UNE ADRESSE DIFFÉRENTE?",
+  "Shipping Details": "Les détails d'expédition",
+  "Additional information": "Additional information",
+  "Order notes": "Notes d'ordre",
+  "Notes about your order, e.g. special notes for delivery.": "Remarques sur votre commande, par exemple notes spéciales pour la livraison.",
+  "Your order": "Votre commande",
+  "I agree with the terms and conditions": "J'accepte les termes et conditions",
+  "Product": "Produit",
+  "Get In Touch": "Entrer en contact",
+  "Name": "Nom",
+  "Subject": "Matière",
+  "Your Message": "Votre message",
+  "Send": "Envoyer",
+  "Continue": "Continuer",
+  "Delivery Information": "Informations de livraison",
+  "Delivery Address": "Adresse de livraison",
+  "Billing Information": "détails de facturation",
+  "Billing Address": "Adresse de facturation",
+  "User Name": "Nom d'utilisateur",
+  "Current Password": "Mot de passe actuel",
+  "Change your password": "changez votre mot de passe",
+  "Your orders items": "Vos articles de commande",
+  "View Details": "Voir les détails",
+  "Order Id": "Numéro de commande",
+  "Ordered on": "Commandé le",
+  "Order Total": "Total de la commande",
+  "Your orders details": "Détails de vos commandes",
+  "Payment & Shipping details": "Détails de paiement et d'expédition",
+  "Order No": "N ° de commande.",
+  "Order Date": "Date de commande",
+  "Payment Methods": "méthodes de payement",
+  "Order Status": "Statut de la commande",
+  "No items found": "Aucun élément trouvé",
+  "No items found in recent order": "Aucun article trouvé dans la commande récente"
 }
