Resolved  trello's card

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -45,7 +45,7 @@
   "Postcode": "Postcode / Zip",
   "Phone": "Phone",
   "Repeat Password": "Repeat Password",
-  "Username": "Username or email address",
+  "Username": "Email address",
   "Personal Information": "Personal Information",
   "Login Information": "Login Information",
   "Your cart items": "Your cart items",
@@ -76,7 +76,7 @@
   "Search": "Search",
   "Search here...": "Search here...",
   "Forgot Password": "Mot de passe oublié",
-  "Forgot Password Note": "Lost your password? Please enter your username or email address. You will receive a link to create a new password via email.",
+  "Forgot Password Note": "Lost your password? Please enter your email address. You will receive a link to create a new password via email.",
   "Reset Password": "Reset Password",
   "Go to login": "Go to login",
   "Update Password": "Update Password",
