--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -45,7 +45,7 @@
   "Postcode": "Code postal / Zip",
   "Phone": "Téléphone",
   "Repeat Password": "Répéter le mot de passe",
-  "Username": "Nom d'utilisateur ou adresse e-mail",
+  "Username": "Adresse e-mail",
   "Personal Information": "Renseignements personnels",
   "Login Information": "Informations de connexion",
   "Your cart items": "Articles de votre panier",
@@ -76,7 +76,7 @@
   "Search": "Chercher",
   "Search here...": "Cherche ici...",
   "Forgot Password": "Forgot Password",
-  "Forgot Password Note": "Mot de passe perdu? Veuillez saisir votre identifiant ou adresse mail. Vous recevrez un lien pour créer un nouveau mot de passe par e-mail.",
+  "Forgot Password Note": "Mot de passe perdu? Veuillez saisir votre adresse e-mail. Vous recevrez un lien pour créer un nouveau mot de passe par e-mail.",
   "Reset Password": "réinitialiser le mot de passe",
   "Go to login": "Aller à la connexion",
   "Update Password": "Mettre à jour le mot de passe",
