Fixed home page

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -21,7 +21,7 @@
   "My Account": "My Account",
   "Recent Orders": "Recent Orders",
   "Logout": "Logout",
-  "Join With Us!": "Join With Us!",
+  "Subscribe to our newsletter": "Subscribe to our newsletter!",
   "Subscribe to our newsletter to receive news on update": "Subscribe to our newsletter to receive news on update",
   "Get E-mail updates about our latest shop and special offers.": "Get E-mail updates about our latest shop and special offers.",
   "Your Email Address": "Your Email Address",
