1) search box can be removed on category 2) When changing language then content of the page 3) Still an issue with pagination

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -75,7 +75,7 @@
   "Out of Stock": "Out of Stock",
   "Search": "Search",
   "Search here...": "Search here...",
-  "Forgot Password": "Mot de passe oublié",
+  "Forgot Password": "Forgot Password",
   "Forgot Password Note": "Lost your password? Please enter your email address. You will receive a link to create a new password via email.",
   "Reset Password": "Reset Password",
   "Go to login": "Go to login",
@@ -122,5 +122,23 @@
   "Payment Methods": "Payment Methods",
   "Order Status": "Order Status",
   "No items found": "No items found",
-  "No items found in recent order": "No items found in recent order"
+  "No items found in recent order": "No items found in recent order",
+  "Categories": "Categories",
+  "Manufactures": "Manufactures",
+  "Color": "Color",
+  "Size": "Size",
+  "Cart": "Cart",
+  "Place your order": "Place your order",
+  "Order Confirm": "Order Confirm",
+  "Order Completed": "Order Completed",
+  "Thank you for ordering from importa": "Thank you for ordering from importa",
+  "Your order id is": "Your order id is",
+  "An email with you order details has been sent to": "An email with you order details has been sent to",
+  "Feedback": "If you have any comments or suggestions for us. please send us an email with your order id. We value your feedback",
+  "Order Details": "Order Details",
+  "No items found in category": "No items found in category",
+  "No items found in cart": "No items found in cart",
+  "No items found in checkout": "No items found in checkout",
+  "Page Not Found": "Page Not Found",
+  "404 Page Note": "Sorry but the page you are looking for does not exist, have been removed, name changed or is temporarity unavailable."
 }
