--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -75,7 +75,7 @@
   "Out of Stock": "En rupture de stock",
   "Search": "Chercher",
   "Search here...": "Cherche ici...",
-  "Forgot Password": "Forgot Password",
+  "Forgot Password": "Mot de passe oublié",
   "Forgot Password Note": "Mot de passe perdu? Veuillez saisir votre adresse e-mail. Vous recevrez un lien pour créer un nouveau mot de passe par e-mail.",
   "Reset Password": "réinitialiser le mot de passe",
   "Go to login": "Aller à la connexion",
@@ -122,5 +122,23 @@
   "Payment Methods": "méthodes de payement",
   "Order Status": "Statut de la commande",
   "No items found": "Aucun élément trouvé",
-  "No items found in recent order": "Aucun article trouvé dans la commande récente"
+  "No items found in recent order": "Aucun article trouvé dans la commande récente",
+  "Categories": "Catégories",
+  "Manufactures": "Les manufactures",
+  "Color": "Couleur",
+  "Size": "Taille",
+  "Cart": "Chariot",
+  "Place your order": "Passer votre commande",
+  "Order Confirm": "Confirmer la commande",
+  "Order Completed": "Commande terminée",
+  "Thank you for ordering from importa": "Merci d'avoir commandé chez importa",
+  "Your order id is": "Votre identifiant de commande est",
+  "An email with you order details has been sent to": "Un e-mail contenant les détails de votre commande a été envoyé à",
+  "Feedback": "Si vous avez des commentaires ou des suggestions pour nous. veuillez nous envoyer un e-mail avec votre identifiant de commande Nous apprécions vos commentaires",
+  "Order Details": "détails de la commande",
+  "No items found in category": "Aucun article trouvé dans la catégorie",
+  "No items found in cart": "Aucun article trouvé dans le panier",
+  "No items found in checkout": "Aucun article trouvé lors du paiement",
+  "Page Not Found": "Page non trouvée",
+  "404 Page Note": "Désolé mais la page que vous recherchez n'existe pas, a été supprimée, son nom a été modifié ou est temporairement indisponible."
 }
