--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -142,5 +142,6 @@
   "Page Not Found": "Page Not Found",
   "404 Page Note": "Sorry but the page you are looking for does not exist, have been removed, name changed or is temporarity unavailable.",
   "Your account": "Your account",
-  "Delete your account": "Delete your account"
+  "Delete your account": "Delete your account",
+  "Account Management": "Account Management"
 }
