--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -25,7 +25,7 @@
   "Subscribe to our newsletter to receive news on update": "Abonnez-vous à notre newsletter pour recevoir les actualités",
   "Get E-mail updates about our latest shop and special offers.": "Recevez des mises à jour par e-mail sur notre dernière boutique et nos offres spéciales.",
   "Your Email Address": "Votre adresse email",
-  "Subscribe": "Souscrire",
+  "Subscribe": "S'inscrire",
   "Address": "Adresse",
   "Tel": "Tél",
   "E-mail": "Email",
