Fixed null image and french language

--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -13,7 +13,7 @@
   "Free delivery on order over": "Livraison gratuite à partir de",
   "Featured Products": "Produits populaires",
   "View Cart": "Voir le panier",
-  "Checkout": "Check-out",
+  "Checkout": "Passer à la caisse",
   "Total": "Totale",
   "No items added to cart": "Aucun article ajouté au panier",
   "Login": "S'identifier",
@@ -52,26 +52,26 @@
   "Image": "Image",
   "Product Name": "Nom du produit",
   "Unit Price": "Prix ​​unitaire",
-  "Qty": "Qté",
+  "Qty": "Qtée",
   "Subtotal": "Total",
   "Action": "action",
   "Continue Shopping": "Continuer vos achats",
   "Clear Shopping Cart": "Effacer le panier",
-  "Apply Coupon": "Appliquer Coupon",
+  "Apply Coupon": "Appliquer un coupon",
   "Proceed to Checkout": "Passer à la caisse",
-  "Get A Quote": "Obtenez un devis",
+  "Get A Quote": "Obtenir une estimation",
   "Cart Total": "Total du panier",
   "Total products": "Total produits",
   "Grand Total": "somme finale",
-  "Use Coupon Code": "Utilisez le code de coupon",
+  "Use Coupon Code": "Utilisez un code de coupon",
   "Enter your coupon code if you have one.": "Entrez votre code de coupon si vous en avez un.",
-  "Estimate Shipping And Tax": "Estimation des frais de transports et de la TVA",
+  "Estimate Shipping And Tax": "Estimation des frais de transports",
   "Enter your destination to get a shipping estimate.": "Entrez votre destination pour obtenir une estimation de livraison.",
   "Select a state": "Sélectionner un état",
   "Select a country": "Choisissez un pays",
   "Showing": "Montrant",
   "result": "résultat",
-  "Add to cart": "Ajouter au chariot",
+  "Add to cart": "Ajouter au panier",
   "Out of Stock": "En rupture de stock",
   "Search": "Chercher",
   "Search here...": "Cherche ici...",
@@ -127,7 +127,7 @@
   "Manufactures": "Les manufactures",
   "Color": "Couleur",
   "Size": "Taille",
-  "Cart": "Chariot",
+  "Cart": "Panier",
   "Place your order": "Passer votre commande",
   "Order Confirm": "Confirmer la commande",
   "Order Completed": "Commande terminée",
