--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -17,19 +17,19 @@
   "Total": "Totale",
   "No items added to cart": "Aucun article ajouté au panier",
   "Login": "S'identifier",
-  "Register": "Register",
+  "Register": "S'enregistrer",
   "My Account": "Mon compte",
   "Recent Orders": "Dernières commandes",
   "Logout": "Connectez - Out",
   "Join With Us!": "Rejoignez-nous!",
-  "Subscribe to our newsletter to receive news on update": "Abonnez-vous à notre newsletter pour recevoir les actualités",
+  "Subscribe to our newsletter to receive news on update": "Abonnez-vous à notre newsletter pour recevoir toutes les actualités",
   "Get E-mail updates about our latest shop and special offers.": "Recevez des mises à jour par e-mail sur notre dernière boutique et nos offres spéciales.",
   "Your Email Address": "Votre adresse email",
   "Subscribe": "S'inscrire",
   "Address": "Adresse",
   "Tel": "Tél",
   "E-mail": "Email",
-  "USEFUL LINKS": "LIENS UTILES",
+  "USEFUL LINKS": "Liens utiles",
   "Shop Now": "Achetez maintenant",
   "Remember me": "Souviens-toi de moi",
   "Forgot Password?": "Mot de passe oublié?",
