--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -145,5 +145,9 @@
   "Delete your account": "Delete your account",
   "Account Management": "Account Management",
   "Sending": "Sending ...",
+  "Styles": "Styles",
+  "Pitch1": "#New Collection 2021",
+  "Pitch2": "It's all about comfort",
+  "Shop now": "Shop Now",
   "Subscribe confirmation": "Thank you for subscribing!. We will send you text message promotions & updates."
 }
