--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -143,5 +143,9 @@
   "404 Page Note": "Désolé mais la page que vous recherchez n'existe pas, a été supprimée, son nom a été modifié ou est temporairement indisponible.",
   "Your account": "Votre compte",
   "Delete your account": "Supprimer votre compte",
+  "Styles": "Styles",
+  "Pitch1": "#New Collection 2021<",
+  "Pitch2": "It's all about comfort",
+  "Shop now": "Magasinez-maintenant",
   "Account Management": "Gestion de compte"
 }
