--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -1,6 +1,8 @@
 {
   "Home": "Home",
   "Terms and Policy": "Terms and Policy",
+  "Cookie Consent": "This website uses cookies only to enhance the user experience.",
+  "Accept": "Accept",
   "Contact": "Contact",
   "en": "English",
   "fr": "French",
