--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -1,6 +1,8 @@
 {
   "Home": "Accueil",
   "Terms and Policy": "Termes et politique",
+  "Cookie Consent": "Ce site Web utilise des cookies uniquement pour améliorer l'expérience utilisateur.",
+  "Accept": "Accepter",
   "Contact": "Contact",
   "en": "Anglais",
   "fr": "Francais",
