Product description tab translations

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -94,6 +94,7 @@
   "Your order": "Your order",
   "I agree with the terms and conditions": "I agree with the terms and conditions",
   "Product": "Product",
+  "Package size": "Package size",
   "Get In Touch": "Get In Touch",
   "Name": "Name",
   "Subject": "Subject",
