--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -94,6 +94,7 @@
   "Your order": "Votre commande",
   "I agree with the terms and conditions": "J'accepte les termes et conditions",
   "Product": "Produit",
+  "Package size": "Dimensions du produit emballé",
   "Get In Touch": "Entrer en contact",
   "Name": "Nom",
   "Subject": "Matière",
