--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -95,9 +95,9 @@
   "I agree with the terms and conditions": "J'accepte les termes et conditions",
   "Product": "Produit",
   "Package size": "Dimensions du produit emballé",
-  "Get In Touch": "Entrer en contact",
+  "Get In Touch": "Nous contacter",
   "Name": "Nom",
-  "Subject": "Matière",
+  "Subject": "Sujet",
   "Your Message": "Votre message",
   "Send": "Envoyer",
   "Continue": "Continuer",
