Resolved Trello's issues :: SHOP - Pages api must receive language

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -147,5 +147,8 @@
   "Pitch1": "#New Collection 2021",
   "Pitch2": "It's all about comfort",
   "Shop now": "Shop Now",
-  "Subscribe confirmation": "Thank you for subscribing!. We will send you text message promotions & updates."
+  "Subscribe confirmation": "Thank you for subscribing!. We will send you text message promotions & updates.",
+  "SKU": "SKU",
+  "Description": "Description",
+  "Reviews": "Reviews"
 }
