--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -145,5 +145,8 @@
   "Pitch1": "#Nouvelle Collection 2021",
   "Pitch2": "Simplement confortable",
   "Shop now": "Magasiner",
-  "Account Management": "Gestion de compte"
+  "Account Management": "Gestion de compte",
+  "SKU": "UGS",
+  "Description": "La description",
+  "Reviews": "Commentaires"
 }
