In product details page translable

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -150,5 +150,11 @@
   "Subscribe confirmation": "Thank you for subscribing!. We will send you text message promotions & updates.",
   "SKU": "SKU",
   "Description": "Description",
-  "Reviews": "Reviews"
+  "Reviews": "Reviews",
+  "Weight": "Weight",
+  "Add a Review": "Add a Review",
+  "Your rating": "Your rating",
+  "Message": "Message",
+  "Submit": "Submit",
+  "No items found in reviews": "No items found in reviews"
 }
