Fixed non existing images

--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -156,5 +156,6 @@
   "Your rating": "Your rating",
   "Message": "Message",
   "Submit": "Submit",
-  "No items found in reviews": "No items found in reviews"
+  "No items found in reviews": "No items found in reviews",
+  "All Rights Reserved": "All Rights Reserved"
 }
