--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -6,7 +6,7 @@
   "Contact": "Contact",
   "en": "Anglais",
   "fr": "Francais",
-  "Call Us": "Appelez-nous",
+  "Call Us": "Pour nous joindre",
   "Free delivery on order over": "Livraison gratuite à partir de",
   "Featured Products": "Produits populaires",
   "View Cart": "Voir le panier",
@@ -154,5 +154,6 @@
   "Your rating": "Votre note",
   "Message": "Un message",
   "Submit": "Soumettre",
-  "No items found in reviews": "Aucun article trouvé dans les avis"
+  "No items found in reviews": "Aucun article trouvé dans les avis",
+  "All Rights Reserved": "Tous droits réservés"
 }
