--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -8,7 +8,7 @@
   "fr": "Francais",
   "Call Us": "Pour nous joindre",
   "Free delivery on order over": "Livraison gratuite à partir de",
-  "Featured Products": "Produits populaires",
+  "Featured Products": "Nouveautés",
   "View Cart": "Voir le panier",
   "Checkout": "Passer à la caisse",
   "Total": "Total",
