--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -94,7 +94,7 @@
   "Your order": "Votre commande",
   "I agree with the terms and conditions": "J'accepte les termes et conditions",
   "Product": "Produit",
-  "Package size": "Dimensions du produit emballé",
+  "Package size": "Dimensions",
   "Get In Touch": "Entrer en contact",
   "Name": "Nom",
   "Subject": "Matière",
@@ -146,8 +146,8 @@
   "Pitch2": "PerfectoGaz",
   "Shop now": "Magasiner",
   "Account Management": "Gestion de compte",
-  "SKU": "UGS",
-  "Description": "La description",
+  "SKU": "Code",
+  "Description": "Description",
   "Reviews": "Commentaires",
   "Weight": "Poids",
   "Add a Review": "Ajouter un commentaire",
