--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -142,8 +142,8 @@
   "Your account": "Votre compte",
   "Delete your account": "Supprimer votre compte",
   "Styles": "Styles",
-  "Pitch1": "#Nouvelle Collection 2021",
-  "Pitch2": "Simplement confortable",
+  "Pitch1": "#Nouvelle Collection 2022",
+  "Pitch2": "Importations du monde",
   "Shop now": "Magasiner",
   "Account Management": "Gestion de compte",
   "SKU": "UGS",
