--- a/src/translations/english.json
+++ b/src/translations/english.json
@@ -144,8 +144,8 @@
   "Account Management": "Account Management",
   "Sending": "Sending ...",
   "Styles": "Styles",
-  "Pitch1": "#New Collection 2021",
-  "Pitch2": "It's all about comfort",
+  "Pitch1": "#New Collection 2022",
+  "Pitch2": "Imports from the world",
   "Shop now": "Shop Now",
   "Subscribe confirmation": "Thank you for subscribing!. We will send you text message promotions & updates.",
   "SKU": "SKU",
