remove shop now

--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -142,9 +142,9 @@
   "Your account": "Votre compte",
   "Delete your account": "Supprimer votre compte",
   "Styles": "Styles",
-  "Pitch1": "#Nouvelle Collection 2022",
+  "Pitch1": "Poêles et Foyers au Gaz",
   "Pitch2": "PerfectoGaz",
-  "Shop now": "Magasiner",
+  "Shop now": "St.-Simon, Sainte-Madeleine, QC",
   "Account Management": "Gestion de compte",
   "SKU": "Code",
   "Description": "Description",
