--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -142,7 +142,7 @@
   "Your account": "Votre compte",
   "Delete your account": "Supprimer votre compte",
   "Styles": "Styles",
-  "Pitch1": "#Nouvelle Collection 2022",
+  "Pitch1": "Poëles et Foyers au gaz",
   "Pitch2": "Importations du monde",
   "Shop now": "Magasiner",
   "Account Management": "Gestion de compte",
