--- a/src/translations/french.json
+++ b/src/translations/french.json
@@ -67,7 +67,7 @@
   "Select a state": "Sélectionner un état",
   "Select a country": "Choisissez un pays",
   "Showing": "Montrant",
-  "result": "résultat",
+  "result": "résultat(s)",
   "Add to cart": "Ajouter au panier",
   "Out of Stock": "En rupture de stock",
   "Search": "Chercher",
